2000-04-28  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* pws: 10999: Completion/Core/compinstall: some idiot didn't
	get searching of alternative files for definitions to work properly.

2000-04-28  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10992: Src/Zle/complist.c: avoid wrapping around both
 	horizontally and vertically at the same time
	
2000-04-27  Bart Schaefer  <schaefer@brasslantern.com>

	* Tanaka Akira: 10980: Completion for enscript.

2000-04-27  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10985: Completion/Core/compinstall: _oldlist, list-prompt and
	matcher-list enhancements.

2000-04-27  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10979: originally from Felix: 10894: Completion/Core/.distfiles,
	Completion/Core/_history, Doc/Zsh/compsys.yo: new _history completer
	
	* 10978: Src/Zle/complist.c: better wrap around for cursor
	movement widgets; avoid flicker when leaving menu-selection
	
	* 10977: and Andrej: 10976: Completion/User/_make: use $words[1]
 	to call make in _make and throw away stderr and use _call
	
	* 10974: Completion/Base/_arguments: ensure $PWD is prepended to
 	cache-names for long options in _arguments
	
2000-04-27  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 10971: Src/pattern.c: noglobdots didn't work with the PAT_ANY
	flag, which meant that **/ always globbed dots.

2000-04-27  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 10967: Completion/Base/_arguments: fix for automatic
 	option-argument completion with partially typed option in _arguments
	
	* 10965: and Felix: 10952: Completion/User/_urls,
 	Doc/Zsh/compsys.yo: document _wanted -C; fix for call to _wanted
 	in _urls
	
	* 10963: Src/Zle/complete.c: fix for parse error with
 	left-anchored patterns
	
	* 10961: Src/Zle/complist.c: make menu-selection handle
 	undefined-key
	
	* 10959: Completion/Core/_main_complete, Doc/Zsh/compsys.yo,
 	Doc/Zsh/mod_complist.yo, Src/params.c, Src/Zle/compcore.c,